--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Win7DT's Homepage
-description: Bookmark this to keep an eye on my project updates
+description: Fun projects and stuff! Also the developer of MassiveMP.
