--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Win7DT's Homepage
 description: Fun projects and stuff! Also the developer of MassiveMP.
+markdown: GFM
