--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Win7DT's Homepage
 description: Fun projects and stuff! Also the developer of MassiveMP.
 markdown: GFM
+include: affl.md
