--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ title: Win7DT's Homepage
 description: Fun projects and stuff! Also the developer of MassiveMP.
 markdown: GFM
 include: affl.html
+url: "https://win7devs.github.io"
