--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-relative-links
 title: Win7DT's Homepage
 description: Fun projects and stuff! Also the developer of MassiveMP.
 markdown: GFM
